fix dark mode narrow screen width

--- a/src/components/Layout/Header/DarkModeToggle/style.module.scss
+++ b/src/components/Layout/Header/DarkModeToggle/style.module.scss
@@ -84,6 +84,7 @@
 
 @media screen and (max-width: $responsive-breakpoint) {
   .outerSlider {
+    min-width: 2rem;
     width: 2rem;
     display: flex;
     align-items: center;
